crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_attributes_by_selector__remove_attributes_by_selector.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_attributes_by_selector.rs
expression: "test_config(r#\"{ \"removeAttributesBySelector\": [{\n            \"selector\": \"[fill='#0f0']\",\n            \"attributes\": [\"fill\"]\n        }] }\"#,\nSome(r##\"<svg id=\"test\" xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 100 100\">\n    <rect x=\"0\" y=\"0\" width=\"100\" height=\"100\" fill=\"#00ff00\" stroke=\"#00ff00\"/>\n</svg>\"##))?"
---
<svg xmlns="http://www.w3.org/2000/svg" id="test" viewBox="0 0 100 100">
    <rect x="0" y="0" width="100" height="100" stroke="#0f0"/>
</svg>
